# deluxe-analyze

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  dico_tables.csv  type_tickets.csv
.github/workflows/: ci.yml  deploy-dashboard-backend.yml  deploy-dispatcher.yml  deploy-etl.yml  infra.yml
archive/deluxe_neo4j_cdc/: __init__.py  neo4j_sync.py  projection.py
archive/deluxe_streaming_temp_snapshot/: README.md  main.py
archive/deploy/: spark_main.py
archive/tests_old/: test_projection.py
aws/: README.md
aws/dms/: task-mapping.json  task-settings.json
aws/iam/: dms-policy.json  (+1 more)
dashboard/backend/: Dockerfile  README.md  pyproject.toml
dashboard/backend/app/: auth.py  cache.py  config.py  main.py  neo4j_client.py  queries.py  schemas.py
dashboard/backend/tests/: conftest.py  test_routers.py
data/: events.csv  users.csv
dispatcher/: Dockerfile  pyproject.toml
dispatcher/dispatcher/: __main__.py  config.py  submit.py
docs/: dataproc-streaming-runbook.md  gcp-runtime-context.md  streaming-pipeline.md  workspace-guide.md
etl/: pyproject.toml
etl/etl/: config.py
etl/etl/derive/: conoce_a.py
etl/etl/load/: neo4j_writer.py
etl/etl/normalize/: canonical.py  from_csv.py  from_v2.py  merge_canonical.py
etl/etl/sources/: csv_source.py  s3_cdc_source.py
etl/etl/state/: watermark.py
etl/jobs/: main.py
etl/tests/: conftest.py  test_idempotency.py  test_normalize.py
infra/: apis.tf  backend.tf  cloudrun.tf  compute.tf  dashboard.tfplan  dashboard_api.tf  dataproc.tf  iam.tf  network.tf  outputs.tf  providers.tf  scheduler.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
notebooks-client/: connect_neo4j.ipynb  graph_analysis_query_playbook_enriched.ipynb
sketch_pipelines/: graph_analysis_query_playbook.ipynb
tools/: seed_loader.py
(+64 files in other folders)
