[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deluxe-dispatcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-pubsub>=2.21",
    "google-cloud-dataproc>=5.10",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["dispatcher"]

[tool.ruff]
line-length = 100
target-version = "py311"
