[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deluxe-etl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5",
    "neo4j>=5.0",
    "boto3>=1.34",
    "pyarrow>=15.0",
    "pydantic-settings>=2.0",
    "google-cloud-storage>=2.0",
    "google-cloud-secret-manager>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "testcontainers[neo4j]>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
