[project]
name = "dashboard-api"
version = "0.1.0"
description = "FastAPI backend for the deluxe-analyze sales dashboard (Neo4j queries)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "neo4j>=5.18,<7.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",  # required by FastAPI TestClient
  "ruff>=0.4",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
